move files to their respective folders

--- a/src/PGS.DDD.Domain/PGS.DDD.Domain.csproj
+++ b/src/PGS.DDD.Domain/PGS.DDD.Domain.csproj
@@ -40,7 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Code.cs" />
+    <Compile Include="AggregateRoot.cs" />
+    <Compile Include="DomainEvent.cs" />
+    <Compile Include="Entity.cs" />
+    <Compile Include="IAggregateRoot.cs" />
+    <Compile Include="IEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
