create test of adding a link to weeks links read model

--- a/src/PGS.DDD.Domain/PGS.DDD.Domain.csproj
+++ b/src/PGS.DDD.Domain/PGS.DDD.Domain.csproj
@@ -41,10 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AggregateRoot.cs" />
+    <Compile Include="DomainConstraintViolation.cs" />
     <Compile Include="DomainEvent.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="IAggregateRoot.cs" />
     <Compile Include="IEntity.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
