--- a/src/PGS.DDD.Application/PGS.DDD.Application.csproj
+++ b/src/PGS.DDD.Application/PGS.DDD.Application.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandResult.cs" />
+    <Compile Include="IEventHandler.cs" />
+    <Compile Include="IEventPublisher.cs" />
     <Compile Include="IServiceBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
