--- a/src/PGS.DDD.Application/PGS.DDD.Application.csproj
+++ b/src/PGS.DDD.Application/PGS.DDD.Application.csproj
@@ -30,6 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="CommandResult.cs" />
     <Compile Include="IEventHandler.cs" />
     <Compile Include="IEventPublisher.cs" />
@@ -39,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PGS.DDD.Domain\PGS.DDD.Domain.csproj">
-      <Project>{049dc5f0-737d-47fd-92d7-3f2a62f22bb6}</Project>
+      <Project>{049DC5F0-737D-47FD-92D7-3F2A62F22BB6}</Project>
       <Name>PGS.DDD.Domain</Name>
     </ProjectReference>
   </ItemGroup>
