remove Uri responsibility from Id

--- a/src/PGS.DDD.Application/PGS.DDD.Application.csproj
+++ b/src/PGS.DDD.Application/PGS.DDD.Application.csproj
@@ -33,6 +33,7 @@
     <Compile Include="CommandResult.cs" />
     <Compile Include="IEventHandler.cs" />
     <Compile Include="IEventPublisher.cs" />
+    <Compile Include="IIdConverter.cs" />
     <Compile Include="IServiceBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
