package impromptu interface with ddd.domain

--- a/src/PGS.DDD.Domain/paket.template
+++ b/src/PGS.DDD.Domain/paket.template
@@ -3,6 +3,8 @@ id PGS.DDD.Domain
 include-pdbs true
 excludeddependencies
   GitVersionTask
+  ImpromptuInterface
+  Costura.Fody
 tags
   ddd eventsourcing eventstore
 copyright 
