--- a/src/PGS.DDD.ServiceBus/PGS.DDD.ServiceBus.csproj
+++ b/src/PGS.DDD.ServiceBus/PGS.DDD.ServiceBus.csproj
@@ -68,4 +68,5 @@
     </When>
   </Choose>
   <Import Project="..\..$(__paket__GitVersionTask_targets).targets" Condition="Exists('..\..$(__paket__GitVersionTask_targets).targets')" Label="Paket" />
+  <Import Project="..\..\.paket\paket.targets" />
 </Project>
