--- a/src/PGS.DDD.Data.NEventStore/PGS.DDD.Data.NEventStore.csproj
+++ b/src/PGS.DDD.Data.NEventStore/PGS.DDD.Data.NEventStore.csproj
@@ -79,4 +79,5 @@
     </When>
   </Choose>
   <Import Project="..\..$(__paket__GitVersionTask_targets).targets" Condition="Exists('..\..$(__paket__GitVersionTask_targets).targets')" Label="Paket" />
+  <Import Project="..\..\.paket\paket.targets" />
 </Project>
