--- a/src/PGS.DDD.Domain/PGS.DDD.Domain.csproj
+++ b/src/PGS.DDD.Domain/PGS.DDD.Domain.csproj
@@ -113,4 +113,5 @@
   </Choose>
   <Import Project="..\..\packages\Fody\build\$(__paket__Fody_targets).targets" Condition="Exists('..\..\packages\Fody\build\$(__paket__Fody_targets).targets')" Label="Paket" />
   <Import Project="..\..$(__paket__GitVersionTask_targets).targets" Condition="Exists('..\..$(__paket__GitVersionTask_targets).targets')" Label="Paket" />
+  <Import Project="..\..\.paket\paket.targets" />
 </Project>
