package templates and fixed assembly info

--- a/src/PGS.DDD.ReadModel/PGS.DDD.ReadModel.csproj
+++ b/src/PGS.DDD.ReadModel/PGS.DDD.ReadModel.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="IReadModelOfT.cs" />
     <Compile Include="IReadModel.cs" />
@@ -58,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="paket.references" />
+    <None Include="paket.template" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Choose>
