--- a/src/PGS.DDD.Application/PGS.DDD.Application.csproj
+++ b/src/PGS.DDD.Application/PGS.DDD.Application.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="CommandResult.cs" />
     <Compile Include="IIdConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
