--- a/src/PGS.DDD.Data.EventSourced/PGS.DDD.Data.EventSourced.csproj
+++ b/src/PGS.DDD.Data.EventSourced/PGS.DDD.Data.EventSourced.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="IEventStore.cs" />
     <Compile Include="InMemoryEventStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
