--- a/src/PGS.DDD.Eventing/PGS.DDD.Eventing.csproj
+++ b/src/PGS.DDD.Eventing/PGS.DDD.Eventing.csproj
@@ -41,12 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="IEventHandler.cs" />
     <Compile Include="IEventPublisher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="paket.references" />
+    <None Include="paket.template" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PGS.DDD.Domain\PGS.DDD.Domain.csproj">
