--- a/src/PGS.DDD.ServiceBus/PGS.DDD.ServiceBus.csproj
+++ b/src/PGS.DDD.ServiceBus/PGS.DDD.ServiceBus.csproj
@@ -35,6 +35,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="InMemoryBus.cs" />
     <Compile Include="IServiceBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
