refactored read model building classes

--- a/src/PGS.DDD.ReadModel/PGS.DDD.ReadModel.csproj
+++ b/src/PGS.DDD.ReadModel/PGS.DDD.ReadModel.csproj
@@ -45,6 +45,8 @@
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="EventHandlerExtensions.cs" />
+    <Compile Include="IReadModelBuilderFactoryOfT.cs" />
+    <Compile Include="IReadModelBuilderFactory.cs" />
     <Compile Include="IReadModelOfT.cs" />
     <Compile Include="IReadModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
